--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,5 +40,8 @@
         <activity
             android:name=".CallWatchActivity">
 		</activity>
+		<service
+		    android:name=".CallLogWatchService">
+		</service>
     </application>
 </manifest>
