View building and data capture made more dynamic excluding static keys and replacing XMLPullParser with LayoutInflater. New button added to delete a single row. SDK Version requirements updated Methods are made more moduler

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
 
     defaultConfig {
         applicationId "com.ponmaran.JumpCall"
-        minSdkVersion 11
-        targetSdkVersion 20
+        minSdkVersion 17
+        targetSdkVersion 25
     }
 
     buildTypes {
@@ -16,4 +16,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+}
+
+dependencies {
+    compile 'org.apache.commons:commons-lang3:3.5'
 }
